# sdl_example

./: .gitignore  CMakeLists.txt  Makefile  README.MD  SDL3.md  cleanup.sh  main  main.c  main.cpp
SDL2/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
SDL3/: 3d_example.c  CMakeLists.txt  Makefile  main.c  main.cpp  snake  snake.cpp
SDL3/examples/: CMakeLists.txt  Makefile  circle  circle_example.cpp  music  music_example.cpp
SDL3/examples/3d/: .gitignore  3d_example.c
SDL3/examples/music/: Makefile
SDL3/examples/text/: CMakeLists.txt  Makefile  text_example.cpp
SDL3/game/: CMakeLists.txt
SDL3/game/src/: entities.h  player.cpp  playerUI.h  tools.cpp
SDL3/snake_game/: CMakeLists.txt  Makefile
SDL3/src/: animation.cpp  animation.h  entities.cpp  entities.h  game.cpp  game.h  main.cpp  player.cpp  player.h  structs.h  tools.cpp  tools.h
examples/: Makefile
examples/3d/: 3d_example.c  CMakeLists.txt  Makefile
examples/circle/: .gitignore  CMakeLists.txt  Makefile  circle_example.cpp
examples/music/: .gitignore  CMakeLists.txt  Makefile  music_example.cpp
examples/text/: .gitignore  Makefile  text_example.cpp
game/: Makefile
game/src/: game.cpp  playerUI.cpp
snake_game/: Makefile  snake.cpp
